// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshots > changes variant 1`] = `
<DocumentFragment>
  <button
    class="sc-hRDKVd jVlgCw aje-btn aje-btn--secondary is-auto"
    tabindex="0"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > loading completed state 1`] = `
<DocumentFragment>
  <button
    class="sc-hRDKVd jVlgCw aje-btn aje-btn--primary is-auto"
    data-loading="true"
    tabindex="0"
    type="button"
  >
    <div
      class="sc-dVBluf iYAHRU aje-loader aje-loader--spinner is-medium"
      data-placement="absolute center"
    >
      <span
        class="sc-gjcoXW dJwhQH aje-checkmark is-medium"
        data-testid="checkmark"
      />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > loading state 1`] = `
<DocumentFragment>
  <button
    class="sc-hRDKVd jVlgCw aje-btn aje-btn--primary is-auto"
    data-loading="true"
    tabindex="0"
    type="button"
  >
    <div
      class="sc-dVBluf iYAHRU aje-loader aje-loader--spinner is-medium"
      data-placement="absolute center"
    >
      <div
        class="sc-FEMpB BJcTP aje-flex"
      >
        <svg
          aria-label="loading"
          aria-valuemax="100"
          aria-valuemin="0"
          class="sc-kfeOyU jmiEpZ aje-progresscircle aje-spinner"
          data-indeterminate="true"
          data-testid="spinner-svg"
          height="2em"
          id="react-aria-:r0:"
          role="progressbar"
          viewBox="0 0 44 44"
          width="2em"
        >
          <circle
            class="sc-gNZgCX gybRWL"
            cx="22"
            cy="22"
            r="16"
          />
          <circle
            class="sc-jbAkgO fEqhtL"
            cx="22"
            cy="22"
            r="16"
            stroke-width="6"
          />
          <circle
            class="sc-dycHyt hudqfR"
            cx="22"
            cy="22"
            r="16"
            stroke-dasharray="0 100"
            stroke-dashoffset="25"
            stroke-linecap="round"
            stroke-width="6"
          />
        </svg>
      </div>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshots > normal display 1`] = `
<DocumentFragment>
  <button
    class="sc-hRDKVd jVlgCw aje-btn aje-btn--primary is-auto"
    tabindex="0"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
